logs/microblog.log
2026-02-11 17:31:06,948 ERROR: Exception on /explore [GET] [in C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\app\routes.py", line 145, in explore
    return render_template('index.html', title='Explore', posts=posts)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\sherv\Downloads\microblog\app\templates\index.html", line 23, in template
    {% endfor %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endfor'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2026-02-11 17:31:07,978 ERROR: Exception on /index [GET] [in C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\app\routes.py", line 27, in index
    return  render_template('index.html', title='Home Page', form=form, posts= posts)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\sherv\Downloads\microblog\app\templates\index.html", line 23, in template
    {% endfor %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endfor'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2026-02-11 17:33:06,862 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:38:36,681 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:51:27,824 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:53:28,721 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:54:03,280 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:54:32,002 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 17:55:36,473 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:46:12,533 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:46:43,541 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:47:11,833 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:50:02,241 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:50:54,799 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:51:15,173 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-11 18:52:18,742 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-13 10:21:29,968 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-13 10:34:50,127 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-13 10:35:33,676 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-13 10:44:35,700 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
2026-02-13 10:44:37,552 ERROR: Exception on /user/Shervie12 [GET] [in C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\sherv\Downloads\microblog\app\routes.py", line 80, in user
    posts = db.paginate(query, page=page, per_page=app.config['POST_PER_PAGE'], error_out=False)
                                                   ~~~~~~~~~~^^^^^^^^^^^^^^^^^
KeyError: 'POST_PER_PAGE'
2026-02-13 10:46:57,527 INFO: Microblog  startup [in C:\Users\sherv\Downloads\microblog\app\__init__.py:46]
